--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rempelonrails</title>
+	<title>Rempel on Rails - Ruby on Rails Freelancing</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header id="main_navigation" class="clearfix">
+		<a href="index.html" class="name">Rempel on Rails</a>
+		<nav>
+			<a href="index.html" class="active">Home</a>
+			<%= link_to "Blog", posts_path %>
+			<a href="projects.html">Projects</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+	</header>
 
 <%= yield %>
 
