--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
 </head>
 <body>
 	<header id="main_navigation" class="clearfix">
-		<a href="index.html" class="name">Rempel on Rails</a>
+		<%= link_to "Rempel on Rails", root_path, class: "name" %>
 		<nav>
-			<a href="index.html" class="active">Home</a>
+			<%= link_to "Home", root_path %>
 			<%= link_to "Blog", posts_path %>
 			<a href="projects.html">Projects</a>
 			<a href="contact.html">Contact</a>
@@ -20,5 +20,13 @@
 
 <%= yield %>
 
+	<footer id="main_footer">
+		<p class="copyright">&copy; 2016 Dan Rempel</p>
+		<nav>
+			<a href="http://www.twitter.com/angry_zellers" target="_blank"><i class="fa fa-twitter"></i></a>
+			<a href="https://ca.linkedin.com/in/drempel" target="_blank"><i class="fa fa-linkedin"></i></a>
+			<a href="https://github.com/danrempel" target="_blank"><i class="fa fa-github"></i></a>
+		</nav>
+	</footer>
 </body>
 </html>
