--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div id="post_show_content" class="skinny_wrapper wrapper_padding  content_container">
 	<header>
-		<p class="date"><%= @post.created_at.strftime('%A, %B %d') %></p>
+		<p class="date"><%= @post.created_at.strftime('%B %d, %Y') %></p>
 		<h1><%= @post.title %></h1>
 		<hr>
 	</header>
