--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 		<nav>
 			<%= link_to "Home", root_path %>
 			<%= link_to "Blog", posts_path %>
-			<a href="projects.html">Projects</a>
+			<%= link_to "Projects", projects_path %>
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
