--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,6 @@
 	<div class="col-2 homepage_content">
 		<h2>Stuff I've Written</h2>
 		<hr>
-		
 		<% @posts.each do |post| %>
 			<h3><%= link_to post.title, post %></h3>
 			<p class="date"><%= post.created_at.strftime("%B %d, %Y") %></p>
@@ -19,11 +18,9 @@
 	<div class="col-3 homepage_content">
 		<h2>Projects</h2>
 		<hr>
-		<h3><a href="#">Quotebox</a></h3>
-		<p class="date">Sunday, February 14th</p>
-		<h3><a href="#">Inventory Management</a></h3>
-		<p class="date">Sunday, February 14th</p>
-		<h3><a href="#">5 in 10 Challenge</a></h3>
-		<p class="date">Sunday, February 14th</p>
+		<% @projects.each do |project| %>
+			<h3><%= link_to project.title, project %></h3>
+			<p class="date"><%= project.created_at.strftime("%B %d, %Y") %></p>
+		<%end %>
 	</div>
 </div>
