--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,9 @@
 		<%= markdown @post.content %>
 	</div>
 
+	<%= link_to "Edit", edit_post_path(@post) %>
+	<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
+
 	<hr>
 
 	<div id="share_box">
