--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,8 +9,8 @@
 		<%= markdown @post.content %>
 	</div>
 
-	<%= link_to "Edit", edit_post_path(@post) %>
-	<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
+	<%= link_to "Edit", edit_post_path(@post), class: "button" %>
+	<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, class: "button" %>
 
 	<hr>
 
