--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,8 +13,8 @@
 		</div>
 	</div>
 
-	<%= link_to "Edit", edit_project_path(@project) %>
-	<%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?" } %>
+	<%= link_to "Edit", edit_project_path(@project), class: "button" %>
+	<%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?" }, class: "button" %>
 
 	<hr>
 </div>
