Add conditional edit and destroy links & sign out link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
 			<%= link_to "Blog", posts_path %>
 			<%= link_to "Projects", projects_path %>
 			<%= link_to "Contact", new_contact_path %>
+			<% if user_signed_in? %>
+				<%= link_to "New Post", new_post_path %>
+					<%= link_to "New Project", new_project_path %>
+				<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+			<% end %>
 		</nav>
 	</header>
 
