Installed & configured Unicorn and Updated the welcome page view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<header id="main_navigation" class="clearfix">
+		<%= favicon_link_tag 'favicon.ico' %>
 		<%= link_to "Rempel on Rails", root_path, class: "name" %>
 		<nav>
 			<%= link_to "Home", root_path %>
