--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,11 +4,11 @@
 		<hr>
 		<p>My name is Dan Rempel and I am a web developer living in Edmonton, Alberta.</p>
 		<p>By day I work as a Sr. Client Support Technician for the University of Alberta, by night I freelance web development projects for my own company, <a href="http://www.dare-studios.com" target="_blank">Dare Studios</a>.</p>
-		<p>I am absolutely <strong>in love</strong> with Ruby on Rails and I am dedicated to becoming a Ruby and Rails expert. It is my dream to someday work with Rails as a career.</p>
-		<p>Flannel keytar green juice, fashion axe vinyl artisan taxidermy actually you probably haven't heard of them mumblecore paleo hoodie. Twee squid pickled drinking vinegar, fap blog tumblr tattooed plaid pop-up mlkshk. Sriracha forage green juice chillwave man braid gentrify. Scenester artisan wolf chillwave 8-bit fanny pack ennui, thundercats brooklyn neutra. Listicle drinking vinegar selvage tilde semiotics, truffaut PBR&B leggings sartorial mixtape VHS poutine pitchfork health goth.</p>
+		<p>I am absolutely <strong>in love</strong> with Ruby on Rails and I am dedicated to improving my Ruby and Rails expertise. It is my dream to someday work with Rails as a career.</p>
+		<p>Right now I am a sponge, soaking up everything I possibly can about Ruby and Rails. I'm taking online courses, reading a few books, following online tutorials, reading the IRC channels, checking out the subreddits, and following a lot of Twitter accounts. Every week I realize I know a bit more than I did last week and it's very pleasant to realize things are beginning to slowly sink in and become commonplace. I hope to document my progress on this journey here on my rails blog!</p>
 	</div>
 	<div class="col-2 homepage_content">
-		<h2>Stuff I've Written</h2>
+		<h2>Recent Posts</h2>
 		<hr>
 		<% @posts.each do |post| %>
 			<h3><%= link_to post.title, post %></h3>
