--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,5 +41,6 @@
 			<a href="https://github.com/danrempel" target="_blank"><i class="fa fa-github"></i></a>
 		</nav>
 	</footer>
+<%= render 'layouts/google_analytics' %>
 </body>
 </html>
