--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,8 @@
  */
 
 @import 'normalize';
-@import url(https://fonts.googleapis.com/css?family=Bitter:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic);
 
 $dark: #424652;
 $white: #ffffff;
@@ -28,7 +29,7 @@ $border: #D5D5D5;
 }
 
 body {
-	font-family: 'Bitter', serif;
+	font-family: 'Raleway', sans-serif;
 	background-color: #e9e9e9;
 }
 
@@ -115,8 +116,8 @@ hr {
 
 #main_navigation {
 	padding: 2.5em 5%;
-	border-bottom: 1px solid $border;
-	background-color: #fff;
+	border-bottom: 1px solid $dark;
+	background: #fff url(image-path('nav_pattern.png')) repeat;
 	box-shadow: 0 10px 15px -8px #000;
 	.active {
 		color: $highlight;
@@ -129,14 +130,14 @@ hr {
 		border: 2px solid $border;
 		padding: 1rem;
 		text-decoration: none;
-		color: $dark;
+		color: $white;
 		float: left;
 	}
 	nav {
 		float: right;
 		padding-top: 1.5rem;
 		a {
-			color: $dark;
+			color: $white;
 			text-decoration: none;
 			margin: 0 1rem;
 			font-size: 1rem;
@@ -157,18 +158,19 @@ hr {
 
 #main_footer {
 	padding: 2.5em 5%;
-	border-top: 1px solid $border;
-	background-color: #fff;
+	border-top: 1px solid $dark;
+	background: #fff url(image-path('nav_pattern.png')) repeat;
 	box-shadow: 0 -10px 15px -8px #000;
 	.copyright {
 		float: left;
+		color: $white;
 		font-size: .9em;
 		margin: 0;
 	}
 	nav {
 		float: right;
 		i {
-			color: $dark;
+			color: $white;
 			margin-left: 1em;
 			padding-top: .2em;
 			&:hover {
