--- a/app/assets/stylesheets/pygments.css.scss
+++ b/app/assets/stylesheets/pygments.css.scss
@@ -76,6 +76,6 @@ code{
 .ss { color: #aa6600; background-color: #fff0f0 } /* Literal.String.Symbol */
 .bp { color: #003388 } /* Name.Builtin.Pseudo */
 .vc { color: #336699 } /* Name.Variable.Class */
-.vg { color: #dd7700 } /* Name.Variable.Global */
+.vg { color: #3F4549 } /* Name.Variable.Global */
 .vi { color: #3333bb } /* Name.Variable.Instance */
 .il { color: #0000DD; font-weight: bold } /* Literal.Number.Integer.Long */
