Added subtitle migration to posts & added them to relevant views

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,6 +14,13 @@
 	<br>
 	<br>
 
+  <%= f.label :subtitle %><br>
+  <%= f.text_field :subtitle %>
+
+  <br>
+  <br>
+
+
 	<%= f.label :content, "Write your article here" %><br>
 	<%= f.text_area :content %>
 
