--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,8 @@
 	<% @posts.each do |post| %>
 		<div class="post">
 			<p class="date"><%= post.created_at.strftime("%B %d, %Y") %></p>
-			<h2><%= link_to post.title, post %></h2>
+      <h2><%= link_to post.title, post %></h2>
+      <h4><%= post.subtitle %></h4>
 			<hr>
 		</div>
 	<% end %>
