--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -27,8 +27,16 @@ $border: #D5D5D5;
 	h3 {
 		font-size: 1.35em;
 		font-weight: 400;
-		margin-bottom: .5em;
+		margin-bottom: .2em;
 	}
+  h4 {
+    font-size: 1rem;
+    font-family: 'Droid Serif', 'Georgia', 'Cambria', 'Times New Roman', serif;
+    color: $light;
+    margin-top: 0.5em;
+    margin-bottom: 0;
+    font-weight: 400;
+  }
 
 	a {
 		text-decoration: none;
@@ -39,7 +47,7 @@ $border: #D5D5D5;
 	}
 	.date {
 		font-size: .85em;
-		margin-bottom: 2em;
+		margin-bottom: .1em;
 		color: $light;
 	}
 	p {
