--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,9 @@
 
 @import 'normalize';
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
-@import url(https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic,300italic,300,700italic,500italic);
+@import
+url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
 
 $dark: #424652;
 $white: #ffffff;
@@ -29,7 +31,7 @@ $border: #D5D5D5;
 }
 
 body {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	background-color: #e9e9e9;
 }
 
@@ -40,7 +42,7 @@ body {
 
 .skinny_wrapper {
 	width: 80%;
-	max-width: 760px;
+	max-width: 664px;
 	margin: 0 auto;
 }
 
