--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div id="post_show_content" class="skinny_wrapper wrapper_padding  content_container">
 	<header>
-		<p class="date"><%= @post.created_at.strftime('%B %d, %Y') %></p>
-		<h1><%= @post.title %></h1>
+    <h1><%= @post.title %></h1>
+    <p class="date"><%= @post.created_at.strftime('%B %d, %Y') %></p>
 		<hr>
 	</header>
 
@@ -21,7 +21,7 @@
 	<hr>
 
 	<div id="share_box">
-		<p>Share <%= @post.title %></p>
+    <p><span class="redshare">Share</span> "<%= @post.title %>"</p>
 		<!-- Twitter -->
     <a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by @angry_zellers - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-twitter"></i></a>
     <!-- Facebook -->
