--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,8 +17,7 @@
 @import 'normalize';
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic,300italic,300,700italic,500italic);
-@import
-url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
 
 $dark: #424652;
 $white: #ffffff;
@@ -42,7 +41,7 @@ body {
 
 .skinny_wrapper {
 	width: 80%;
-	max-width: 664px;
+	max-width: 720px;
 	margin: 0 auto;
 }
 
@@ -159,7 +158,7 @@ hr {
 }
 
 #main_footer {
-	padding: 2.5em 5%;
+	padding: 4em 5%;
 	border-top: 1px solid $dark;
 	background: #fff url(image-path('nav_pattern.png')) repeat;
 	box-shadow: 0 -10px 15px -8px #000;
