--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,11 @@
   <br>
   <br>
 
+  <%= f.label :tags %><br>
+  <%= f.text_field :tag_list, placeholder: "Tags separated with comma"  %>
+
+  <br>
+  <br>
 
 	<%= f.label :content, "Write your article here" %><br>
 	<%= f.text_area :content %>
