--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -27,15 +27,16 @@ $border: #D5D5D5;
 	h3 {
 		font-size: 1.35em;
 		font-weight: 400;
-		margin-bottom: .2em;
+		margin-bottom: .7em;
 	}
   h4 {
     font-size: 1rem;
     font-family: 'Droid Serif', 'Georgia', 'Cambria', 'Times New Roman', serif;
-    color: $light;
+    color: #707070;
     margin-top: 0.5em;
     margin-bottom: 0;
     font-weight: 400;
+    margin-bottom: .8em;
   }
 
 	a {
@@ -47,8 +48,10 @@ $border: #D5D5D5;
 	}
 	.date {
 		font-size: .85em;
-		margin-bottom: .1em;
+		margin-bottom: 2em;
 		color: $light;
+    display: inline-block;
+    padding-right: 10px;
 	}
 	p {
 		margin: 0 0 .75em 0;
