--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,6 +26,12 @@
   <br>
   <br>
 
+  <%= f.label :published %><br>
+  <%= f.select :published, [['Published', true], ['Draft', false]] %>
+
+  <br>
+  <br>
+
 	<%= f.label :content, "Write your article here" %><br>
 	<%= f.text_area :content %>
 
