--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -25,12 +25,13 @@ $border: #D5D5D5;
 	}
 	
 	h3 {
-		font-size: 1.35em;
-		font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+		font-size: 1.3em;
+		font-weight: 700;
 		margin-bottom: .7em;
 	}
   h4 {
-    font-size: 1rem;
+    font-size: .95rem;
     font-family: 'Droid Serif', 'Georgia', 'Cambria', 'Times New Roman', serif;
     color: #707070;
     margin-top: 0.5em;
