--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,12 @@
 <div id="posts_wrapper" class="skinny_wrapper">
 	<% @posts.each do |post| %>
 		<div class="post">
-      <h2><%= link_to post.title, post %></h2>
+      <h2 id="posthead"><%= link_to post.title, post %></h2>
+      <% if user_signed_in? %>
+        <% if post.published == false %>
+          <span id="draft">Draft</span>
+        <% end %>
+      <% end %>
       <h4><%= post.subtitle %></h4>
       <p class="date"><%= post.created_at.strftime("%B %d, %Y") %></p>
       <span class="tag"><%= render post.tags %></span>
