--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -48,11 +48,12 @@ $border: #D5D5D5;
 			}
 	}
 	.date {
-		font-size: .85em;
+		font-size: .9em;
 		margin-bottom: 2em;
 		color: $light;
     display: inline-block;
     padding-right: 10px;
+    font-family: 'Roboto', sans-serif;
 	}
 	p {
 		margin: 0 0 .75em 0;
