--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 			<%= link_to "Home", root_path %>
 			<%= link_to "Blog", posts_path %>
 			<%= link_to "Projects", projects_path %>
-			<%= link_to "Contact", new_contact_path %>
+			<%= link_to "Contact", contact_path %>
 			<% if user_signed_in? %>
 				<%= link_to "New Post", new_post_path %>
         <%= link_to "New Project", new_project_path %>
