Rewrite all meta tags

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags title 'Blog', description: 'A blog for beginner and intermediate Ruby and Rails developers.', keywords: 'Ruby, Rails, YEG, Edmonton, Blog', reverse: true %>
 <div id="posts_wrapper" class="skinny_wrapper">
 	<% @posts.each do |post| %>
 		<div class="post">
