--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags title: 'Projects', description: "A list of Ruby and Rails projects I've built.", keywords: 'Ruby, Rails, YEG, Edmonton, Project', reverse: true %>
 <div id="posts_wrapper" class="skinny_wrapper">
 	<% @projects.each do |project| %>
 		<div class="post project">
