--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags title: @project.title, description: @project.title, keywords: 'Ruby, Rails, YEG, Edmonton, Project', reverse: true %>
 <div id="post_show_content" class="skinny_wrapper wrapper_padding  content_container">
 	<header>
 		<p class="date"><%= @project.created_at.strftime('%B %d, %Y') %></p>
