--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags title: 'Contact', description: 'Get in touch!', keywords: 'contact', reverse: true %>
 <h1 id="page_title">Get in touch!</h1>
 
 <div class="skinny_wrapper wrapper_padding">
