--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= display_meta_tags %>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <%= display_meta_tags site: 'Rempel on Rails' %>
   <meta name="author" content="Dan Rempel">
-	<title>Rempel on Rails - Blogging for the Rails Community</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
