--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags description: 'Rempel on Rails is a blog for beginner and intermediate Ruby and Rails developers, as well as a personal Rails portfolio for Dan Rempel.', keywords: 'web, development, ruby, rails, edmonton, yeg' %>
 <div class="wrapper wrapper_padding clearfix">
 	<div class="col-1 about homepage_content">
 		<h2>About</h2>
