--- a/app/assets/stylesheets/pygments.css.scss
+++ b/app/assets/stylesheets/pygments.css.scss
@@ -13,6 +13,7 @@ green     #859900  operators, other keywords
 */
 
 pre{
+  background-color: #002b36; color: #93a1a1;
 	padding: 10px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -21,13 +22,14 @@ pre{
 }
 
 code{
+  background-color: #002b36; color: #93a1a1;
 	padding: 1px 3px;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
 }
 
-.highlight { background-color: #002b36; color: #93a1a1 }
+.highlight .lineno { color: #586e75 } /* Line Numbers */
 .highlight .c { color: #586e75 } /* Comment */
 .highlight .err { color: #93a1a1 } /* Error */
 .highlight .g { color: #93a1a1 } /* Generic */
