--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,8 @@
 		<nav>
 			<a href="http://www.twitter.com/angry_zellers" target="_blank"><i class="fa fa-twitter"></i></a>
 			<a href="https://ca.linkedin.com/in/drempel" target="_blank"><i class="fa fa-linkedin"></i></a>
-			<a href="https://github.com/danrempel" target="_blank"><i class="fa fa-github"></i></a>
+      <a href="https://github.com/danrempel" target="_blank"><i class="fa fa-github"></i></a>
+      <a href="http://stackoverflow.com/users/5701265/dan-rempel" target="_blank"><i class="fa fa-stack-overflow"></i></a>
 		</nav>
 	</footer>
 <%= render 'layouts/google_analytics' %>
