--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -1,7 +1,7 @@
-$dark: #424652;
+$dark: #2E303A;
 $white: #ffffff;
 $light: #9a9da4;
-$highlight: #c00;
+$highlight: #cb4b16;
 $border: #D5D5D5;
 
 #posts_wrapper {
