--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 @import 'normalize';
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic,300italic,300,700italic,500italic);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
@@ -27,6 +31,10 @@ $highlight: #cb4b16;
 $background: #002b36;
 $border: #D5D5D5;
 
+html {
+  font-size: 17px;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -34,6 +42,7 @@ $border: #D5D5D5;
 body {
 	font-family: 'Roboto', sans-serif;
 	background-color: $white;
+	padding-top: 75px;
 }
 
 .wrapper {
@@ -84,7 +93,7 @@ h2 {
 }
 
 h3 {
-	font-size: 1.75rem;
+	font-size: 1.65rem;
 }
 
 h4 {
@@ -100,7 +109,7 @@ h6 {
 }
 
 p, li {
-	font-size: 1.1rem;
+	font-size: 1rem;
 	line-height: 1.75;
 }
 
@@ -109,7 +118,7 @@ p, ul, ol {
 }
 
 hr {
-		width: 3em;
+		width: 3.5em;
 		display: block;
 		height: 2px;
 		border: 0;
@@ -127,7 +136,7 @@ hr {
 	}
 	.name {
 		font-weight: 700;
-		font-size: 1.1em;
+		font-size: 1.25em;
 		letter-spacing: 2px;
 		text-transform: uppercase;
 		padding: 1rem 0;
@@ -142,7 +151,7 @@ hr {
 			color: $white;
 			text-decoration: none;
 			margin: 0 1rem;
-			font-size: 1rem;
+			font-size: .9rem;
 			&:hover {
 				color: $highlight;
 			}
@@ -150,11 +159,66 @@ hr {
 	}
 }
 
+.navbar {
+	padding: 1em 5%;
+	box-shadow: 0 10px 15px -8px #000;
+	.container {
+		margin: 0;
+	}
+	.name {
+		font-weight: 700;
+		font-size: 1.25em;
+		letter-spacing: 2px;
+		text-transform: uppercase;
+		padding: 1rem 0;
+		text-decoration: none;
+		color: $white;
+	}
+}
+.navbar-inverse { background-color: $background}
+.navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse
+.navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus {
+background-color: $background}
+.navbar-inverse .navbar-nav>.active>a,.navbar-inverse
+.navbar-nav>.open>a,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse
+.navbar-nav>.open>a:hover,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse
+.navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
+background-color: $background}
+.dropdown-menu { background-color: $white}
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-color:
+$background}
+.navbar-inverse { background-image: none; }
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { background-image:
+none; }
+.navbar-inverse { border-color: #080808}
+.navbar-inverse .navbar-brand { color: $white}
+.navbar-inverse .navbar-brand:hover { color: $white}
+.navbar-inverse .navbar-nav>li>a { color: $white}
+.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse
+.navbar-nav>li>a:focus { color: $highlight}
+.navbar-inverse .navbar-nav>.active>a,.navbar-inverse
+.navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover,
+.navbar-inverse .navbar-nav>.open>a:focus { color: $highlight}
+.navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse
+.navbar-nav>.active>a:focus { color: $background}
+.dropdown-menu>li>a { color: #333333}
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus { color: $white}
+.navbar-inverse .navbar-nav>.dropdown>a .caret { border-top-color:
+#999999}
+.navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
+border-top-color: $white}
+.navbar-inverse .navbar-nav>.dropdown>a .caret {
+border-bottom-color: #999999}
+.navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
+border-bottom-color: $white}
+
+
+
 span.tag a {
   color: $highlight;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: .75em;
+  font-size: .9em;
   padding-right: 2px;
   display: inline-block;
   &:after {
@@ -172,8 +236,8 @@ span.tag a {
 #page_title {
 	text-align: center;
 	border-bottom: 1px solid $border;
-	padding: 3em 0;
-	font-size: 1rem;
+	padding: 2em 0;
+	font-size: 1.5rem;
 	text-transform: uppercase;
 }
 
@@ -188,16 +252,17 @@ span.tag a {
     line-height: .5em;
 		color: $light;
     font-weight: 700;
-		font-size: .9em;
+		font-size: 1.1em;
 		margin: 0;
 	}
 	nav {
 		float: right;
 		i {
 			color: $light;
-      line-height: .5em;
+      font-size: 1.1em;
+      line-height: .4em;
 			margin-left: 1em;
-			padding-top: .2em;
+			padding-top: .4em;
 			&:hover {
 				color: $white;
 			}
@@ -224,7 +289,7 @@ input[type="submit"], .button {
 	background: transparent;
 	border: 2px solid $border;
 	text-align: center;
-	font-style: 1em;
+	font-size: 1.2em;
 	color: $dark;
 	text-decoration: none;
 	padding: 1em 2em;
