--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -9,7 +9,7 @@ $border: #D5D5D5;
 	.post {
 		text-align: left;
 		.date {
-			font-size: .9em;
+			font-size: 1.02em;
 			margin: 0;
       display: inline-block;
       padding-right: 10px;
@@ -17,7 +17,8 @@ $border: #D5D5D5;
 		}
 		h2 {
 			margin: 0;
-			font-size: 1.5em;
+			font-size: 1.75em;
+      font-weight: 700;
 			text-transform: capitalize;
 			a {
 				text-decoration: none;
@@ -34,20 +35,20 @@ $border: #D5D5D5;
       display: inline-block;
       padding-left: 10px;
       color: $light;
-      font-size: 1em;
+      font-size: 1.1em;
       font-weight: bold;
       text-transform: uppercase;
     }
     h4 {
       color: #707070;
-      font-size: 1.05em;
+      font-size: 1.2em;
       font-weight: 400;
       margin-top: 1.2em;
       margin-bottom: 1.4em;
       font-family: 'Droid Serif', 'Georgia', 'Cambria', 'Times New Roman', serif;
     }
 		hr {
-			margin: 3em auto;
+			margin: 4em auto;
 		}
 	}
   .project {
@@ -69,7 +70,8 @@ $border: #D5D5D5;
 		}
 		h1 {
 			margin: 0;
-      font-size: 2.3rem;
+      font-size: 2.18rem;
+      font-weight: 700;
 		}
 	}
   p {
@@ -96,7 +98,7 @@ $border: #D5D5D5;
 		font-weight: 700;
 		text-transform: capitalize;
 		color: $dark;
-		font-size: .8em;
+		font-size: 1em;
     .redshare {
       text-transform: uppercase;
       margin-right: 5px;
@@ -104,6 +106,7 @@ $border: #D5D5D5;
 	}
 	i {
 		color: $dark;
+    font-size: 16px; 
 		padding: 1em 1.5em;
 		&:hover {
 			color: $highlight;
@@ -117,6 +120,7 @@ $border: #D5D5D5;
 	border-bottom: 1px solid $border;
 	text-align: center;
 	padding: 1em 0;
+  font-size: 1.5em;
 	margin: 3em 0;
 	a {
 		color: $light;
