--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -54,6 +54,7 @@ $border: #D5D5D5;
     text-align: center;
     h2 {
       font-size: 2em;
+      margin-top: 1em;
     }
   }
 }
@@ -77,16 +78,24 @@ $border: #D5D5D5;
     font-family: 'Georgia', 'Cambria', 'Times New Roman', serif;
     a {
       color: $highlight;
-      font-weight: 400;
       text-decoration: none;
       &:hover {
         color: black;
       }
     }
   }
-	hr {
+  	hr {
 			margin: 3em auto;
 		}
+}
+
+ul li a {
+  color: $highlight;
+  text-decoration: none;
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
 }
 
 #share_box {
