--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -271,6 +271,10 @@ span.tag a {
 	}
 }
 
+label {
+  font-size: 1rem;
+}
+
 input[type="text"],input[type="email"],input[type="password"], textarea {
 	width: 100%;
 	max-width: 100%;
