--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,47 @@
 <% set_meta_tags title 'Blog', description: 'A blog for beginner and intermediate Ruby and Rails developers.', keywords: 'Ruby, Rails, YEG, Edmonton, Blog', reverse: true %>
-<div id="posts_wrapper" class="skinny_wrapper">
-	<% @posts.each do |post| %>
-		<div class="post">
-      <h2 id="posthead"><%= link_to post.title, post %></h2>
-      <% if user_signed_in? %>
-        <% if post.published == false %>
-          <span id="draft">Draft</span>
-        <% end %>
-      <% end %>
-      <h4><%= post.subtitle %></h4>
-      <p class="date"><%= post.created_at.strftime("%B %d, %Y") %></p>
-      <span class="tag"><%= render post.tags %></span>
-			<hr>
-		</div>
-	<% end %>
 
-	<%= will_paginate @posts %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-9 col-md-9 main">
+      <div id="posts_wrapper" class="skinny_wrapper">
+        <% @posts.each do |post| %>
+          <div class="post">
+            <h2 id="posthead"><%= link_to post.title, post %></h2>
+            <% if user_signed_in? %>
+              <% if post.published == false %>
+                <span id="draft">Draft</span>
+              <% end %>
+            <% end %>
+            <h4><%= post.subtitle %></h4>
+            <p class="date"><%= post.created_at.strftime("%B %d, %Y") %></p>
+            <span class="tag"><%= render post.tags %></span>
+            <hr>
+          </div>
+        <% end %>
+
+        <%= will_paginate @posts %>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 sidebar pull-right">
+      <%= image_tag "avatar.png", class: "avatar" %>
+      <p class="about_me">My name is Dan Rempel and I'm a web developer living in Edmonton, Alberta. I'm a ruby enthusiast and analytics junkie. My hope is to use this blog to solidify things as I learn them while also hopefully giving back to the community.</p>
+      <div id="tag_cloud">
+        <h6>Tags</h6>
+        <% tag_cloud Post.tag_counts, %w{s m l} do |tag, css_class| %>
+          <%= link_to tag.name, tag_path(tag.name.downcase), class: css_class %>
+        <% end %>
+      </div>
+      <div id="popular_posts">
+        <h6>Popular Posts</h6>
+        <ul>
+          <li>
+            <a href="http://www.rempelonrails.com/posts/tutorial-build-a-simple-twitter-bot-with-rails-4">Tutorial: Build a Simple Twitter Bot with Rails 4</a>
+          </li>
+          <li>
+            <a href="http://www.rempelonrails.com/posts/gaining-context-hack-your-learning">Gaining Context: Hack Your Learning</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
