--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             <%= link_to "Blog", root_path %>
           </li>
           <li>
-            <%= link_to "About", welcome_index_path %>
+            <%= link_to "About", about_path %>
           </li>
           <li>
             <%= link_to "Projects", projects_path %>
