Replace .png avatar with web-optimized .jpg

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<% set_meta_tags title 'Blog', description: 'A blog for beginner and intermediate Ruby and Rails developers.', keywords: 'Ruby, Rails, YEG, Edmonton, Blog', reverse: true %>
+<% set_meta_tags description: 'A blog for beginner and intermediate Ruby and Rails developers.', keywords: 'Ruby, Rails, YEG, Edmonton, Blog', reverse: true %>
 
 <div class="container">
   <div class="row">
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="col-sm-3 col-md-3 sidebar pull-right">
-      <%= image_tag "avatar.png", class: "avatar" %>
+      <%= image_tag "avatar.jpg", class: "avatar" %>
       <p class="about_me">My name is Dan Rempel and I'm a web developer living in Edmonton, Alberta. I'm a ruby enthusiast and analytics junkie. My hope is to use this blog to solidify things as I learn them while also hopefully giving back to the community.</p>
       <div id="tag_cloud">
         <h6>Tags</h6>
