Add margin below <code> and <pre> for readability

--- a/app/assets/stylesheets/pygments.css.scss
+++ b/app/assets/stylesheets/pygments.css.scss
@@ -15,6 +15,7 @@ green     #859900  operators, other keywords
 pre{
   background-color: #002b36; color: #93a1a1;
 	padding: 10px;
+  margin-bottom: 30px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -24,6 +25,7 @@ pre{
 code{
   background-color: #002b36; color: #93a1a1;
 	padding: 1px 3px;
+  margin-bottom: 30px;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
