Center images in posts

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -144,6 +144,11 @@ p.about_me {
   	hr {
 			margin: 3em auto;
 		}
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto
+    }
 }
 
 ul li a {
