--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -147,7 +147,9 @@ p.about_me {
     img {
       display: block;
       margin-left: auto;
-      margin-right: auto
+      margin-right: auto;
+      max-width: 100%;
+      height: auto;
     }
 }
 
