--- a/app/assets/stylesheets/pygments.css.scss
+++ b/app/assets/stylesheets/pygments.css.scss
@@ -29,6 +29,7 @@ code{
 	 -webkit-border-radius: 2px;
 	 -moz-border-radius: 2px;
 	 border-radius: 2px;
+   overflow: auto;
 }
 
 .highlight .lineno { color: #586e75 } /* Line Numbers */
