Make search form more visible

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -116,6 +116,10 @@ p.about_me {
   }
 }
 
+#search input[type="text"] {
+  border: 2px solid $light;
+}
+
 // ------- Posts Show
 #post_show_content {
 	header {
