--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,8 +21,7 @@
 @import 'normalize';
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic,300italic,300,700italic,500italic);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
-@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Fira+Sans:400,500,700);
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,500,700);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic|Open+Sans:400,700,800,600);
 
 $dark: #2E303A;
 $white: #ffffff;
