--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -19,9 +19,10 @@ $border: #D5D5D5;
 			margin: 0;
 			font-size: 1.75em;
       font-weight: 700;
+      font-family: 'Open Sans', sans-serif;
 			a {
 				text-decoration: none;
-				color: $dark;
+				color: #3A4145;
 				&:hover {
 					color: $highlight;
 				}
@@ -131,12 +132,15 @@ p.about_me {
 		}
 		h1 {
 			margin: 0;
-      font-size: 2.18rem;
+      font-size: 3rem;
       font-weight: 700;
+      color: #3A4145;
+      font-family: 'Open Sans', sans-serif;
 		}
 	}
   p {
-    font-family: 'Georgia', 'Cambria', 'Times New Roman', serif;
+    font-family: 'Noto Serif', serif;
+    font-size: 19px;
     a {
       color: $highlight;
       text-decoration: none;
@@ -154,6 +158,11 @@ p.about_me {
       margin-right: auto;
       max-width: 100%;
       height: auto;
+    }
+    .content, h2, h3, h4 {
+      font-family: 'Open Sans', sans-serif;
+      color: #3A4145;
+      font-weight: 700;
     }
 }
 
