--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -20,6 +20,8 @@ $border: #D5D5D5;
 
 .homepage_content {
 	h2 {
+    font-family: 'Open Sans', sans-serif;
+    color: #3A4145;
 		font-size: 1.8rem;
 		font-weight: 700;
     text-align: center;
@@ -30,7 +32,8 @@ $border: #D5D5D5;
 	}
 	
 	h3 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    color: #3A4145;
 		font-size: 1.49em;
 		font-weight: 700;
 		margin-bottom: .7em;
@@ -62,7 +65,8 @@ $border: #D5D5D5;
 	}
 	p {
 		margin: 0 0 .75em 0;
-    font-family: 'Georgia', 'Cambria', 'Times New Roman', serif;
+    font-family: 'Noto Serif', serif;
+    font-size: 19px;
 	}
 }
 
