--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head, auto_discovery_link_tag(:rss, "http://www.rempelonrails.com/posts.rss") %>
+
 <% set_meta_tags description: 'A blog for beginner and intermediate Ruby and Rails developers.', keywords: 'Ruby, Rails, YEG, Edmonton, Blog', reverse: true %>
 
 <div class="container">
